<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.example.faustino.delitapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/My_user_image"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:contentDescription="@string/icon"
            android:src="@mipmap/icon_driver_6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/mGreen"
            android:text="@string/Petition" />

        <EditText
            android:id="@+id/My_editText_EmailReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/My_editText_passwordReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/My_button_RegistrationReg"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/mGreen"
            android:padding="20dp"
            android:text="@string/registration"
            android:textColor="@color/cardview_dark_background" />

    </LinearLayout>

</ScrollView>


    <!--
    <EditText
    android:id="@+id/My_editText_nameReg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/uName"
    android:inputType="textAutoComplete" />

    <EditText
    android:id="@+id/My_editText_LastNameReg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/user_name"
    android:inputType="textAutoComplete" />-->