<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.faustino.delitapp.ReportDELIT">


    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/messageInsert" />

            <ImageView
                android:id="@+id/form_image_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:contentDescription="@string/description"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <EditText
                android:id="@+id/form_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <Button
                android:id="@+id/form_send_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>
